--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -4,6 +4,9 @@
 \begin{itemize}
 \item validate results
 \item discuss about further work or possible improvements
+\item Page Speed mobile
+\item img optimizations
+\item true progressive enhancement
 \end{itemize}
 
 \begin{quotation}
