--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -5,6 +5,8 @@
 \item validate results
 \item discuss about further work or possible improvements
 \item Page Speed mobile
+\item YSlow mobile bookmarklet
+\item blaze.io
 \item img optimizations
 \item true progressive enhancement
 \end{itemize}
