--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -136,6 +136,27 @@ optimizations and the compromises that had to be made.
 
 \fixme{Add more about background and objectives of this work}
 
+\section{Research Question}
+
+Assuming that we know the reasons and motivation for cross-platform
+HTML5 and the importance of application performance and
+responsiveness:
+
+\begin{itemize}
+\item How should we build cross-platform HTML5 applications?
+
+  \begin{itemize}
+  \item How can we optimize the user interface performance?
+  \item How can we handle the flaky and slow mobile networks?
+  \item How can we handle different screen sizes and device types?
+  \end{itemize}
+\end{itemize}
+
+\noindent In other words, we know the Why, but what about the How?
+
+\chapter{Specifications}
+\label{chapter:specifications}
+
 \section{HTML5}
 \label{section:html5}
 
@@ -880,6 +901,9 @@ element.
 
 notifications, fullscreen, mouse lock, clipboard, gamepad, battery,
 vibration, network information, contacts, intents
+
+\chapter{Tools and Techniques}
+\label{chapter:tools-and-techniques}
 
 \section{Modern Mobile Web Application Architecture}
 \label{section:modern-mobile-web}
