--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -471,9 +471,9 @@ Thank you.
 % Edit the content in these files, rename them as necessary.
 % ------------------------------------------------------------------
 
-\input{gitinfo.tex}
+%\input{gitinfo.tex}
 \input{introduction.tex}
-\input{research-question.tex}
+%\input{research-question.tex}
 \input{methods.tex}
 \input{results.tex}
 \input{discussion.tex}
