Add break between souders' books.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1184,8 +1184,7 @@ related guidelines. According to Souders \cite{souders2007high}, only
 transferring the HTML document from the web server to the
 client. Therefore, most of the optimization should be done in the
 frontend for best improvement opportunities. Below we list the
-performance guidelines defined by Souders \cite{souders2007high,
-  souders2009even}.
+performance guidelines defined by Souders \cite{souders2007high}.
 
 \begin{itemize}
 
@@ -1310,7 +1309,9 @@ performance guidelines defined by Souders \cite{souders2007high,
 
 \end{itemize}
 
-\fixme{add break text here and intro to the second book}
+In addition to the performance rules \cite{souders2007high}, Souders
+also specifies additional techniques to improve performance
+\cite{souders2009even}:
 
 \begin{itemize}
 
