Add intro to the CSS spec list.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -516,12 +516,12 @@ for web application styling. Well separated layout layer keeps the
 document structure clean, and rich styling and effects capabilities
 reduce the need for scripting and provide graceful fallback
 functionality for older user agents. By letting the browser handle,
-for example, rich user interface animation effects lets developers
-optimize the responsiveness and performance of their applications
-since the browser can use the most efficient techniques of the
-platform to handle these effects.
-
-\fixme{add intro to the following list}
+for example, rich user interface animation effects allows developers
+to easily optimize the responsiveness and performance of their
+applications since the browser can use the most efficient techniques
+of the platform to handle these effects. Below we list the main
+components and specifications of the \abbr{W3C} CSS working
+group\footnote{\url{http://www.w3.org/Style/CSS/members.en.php3}}.
 
 \begin{itemize}
 
